--- a/mirza.html
+++ b/mirza.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../src/mirza.css">
+    <link rel="stylesheet" href="../my-portfolio/mirza.css">
 </head>
 <body class="container-fluid">
     <header id="home">
@@ -87,7 +87,7 @@
             </div>
          </div>
             <div class="logo">
-                <img src="../public/images/mypic.jpg" alt="">
+                <img src="../" alt="">
             </div>
     </div>
     </section>
