--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
          </div>
             <div class="logo">
-                <img src="../" alt="">
+                <img src="../my-portfolio/public/images/mypic.jpg" alt="">
             </div>
     </div>
     </section>
@@ -206,7 +206,7 @@
         </div>
             <div class="box1 col-md-3 pb-5">
                 <div class="card-body">
-                    <img src="../public/images/india.jpg" class=" img-fluid" alt="">
+                    <img src="../my-portfolio/public/images/india.jpg" class=" img-fluid" alt="">
                 <div class="card-text">
                     <a href="#"> <h3>Tourism</h3></a>
                  </div>
@@ -214,7 +214,7 @@
         </div>
             <div class="box3 col-md-3 pb-5 ">
                 <div class="card-body">
-                    <img src="../public/images/photography.jfif" class=" img-fluid" alt="">
+                    <img src="../my-portfolio/public/images/photography.jfif" class=" img-fluid" alt="">
                 <div class="card-text">
                     <a href="#"> <h3>Photography</h3></a>
                  </div>
