--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="container-fluid row" id="cards">
             <div class="box1 col-md-3 pb-5 ">
                 <div class="card-body">
-                    <img src="../public/images/shopping.jpg" alt="">
+                    <img src="../my-portfolio/public/images/shopping.jpg" alt="">
                 <div class="card-text">
                     <a href="#"> <h3>Shopping</h3></a>
                  </div>     
