--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../my-portfolio/mirza.css">
+    <link rel="stylesheet" href="../my-portfolio/src/mirza.css">
 </head>
 <body class="container-fluid">
     <header id="home">
@@ -54,11 +54,12 @@
             </div>
         </div>
     </header>
-    <section  id="About">
-        <div class="content">
+    <section  id="About" >
+        <div class="row " >
+        <div class="content col-lg-6 pe-5 col-md-6 col-sm-12 col-12">
             <div>
-                <div class="name">
-                    <h2>Hello,</h2>
+                <div class="name ">
+                    <h2 >Hello,</h2>
                     <p>I'AM </p>
                     <div class="name2">
                         <span>MIRZA</span>
@@ -67,10 +68,10 @@
                     </div>
                 </div>
                 <div class="role">
-                  <h3> <span> A</span> FULL STACK <span> UI </span> WEB <span>DEVELOPER</span></h3>
+                  <h3> <span> A</span> FULL STACK <span class="pe-2"> UI </span> WEB <span >DEVELOPER</span></h3>
                   </div>
                   <aside class="container-fluid row" id="socialmedia"  >
-                    <div class="col-1 col-auto d-flex col-sm ps-5 pb-5" id="socialmedia-menu">
+                    <div class="d-flex ps-5 pb-5 align-content-center" id="socialmedia-menu">
                     <a href="tel:+918978478538"><span class="bi bi-telephone"></span></a>
                     <a href="mirzamoinbg3@gmail.com"><span class="bi bi-envelope"></span></a>
                     <a href="https://github.com/Mirzamoinbaig"><span class="bi bi-github"></span></a>
@@ -84,112 +85,111 @@
                     <p>Hey I'm as a fresher Web Developer, just starting my careear path in the field of Web Development. Likely a strong foundation in programming concepts and some experience with HTML, CSS, and bootstrap as well as experience using one or more Web Development Frameworks And Clone Cloning Web. Overall Being a fresher is an exciting opportunity to start career and work on challenging and intresting Projects while Continuosly Leaning and Developing my skills.</p>
                     </div>
                 </div>
-            </div>
-         </div>
-            <div class="logo">
+        </div>
+            <div class="logo ps-5 col-lg-6 col-sm-12 col-md-6 col-12">
                 <img src="../my-portfolio/public/images/mypic.jpg" alt="">
             </div>
     </div>
     </section>
-   <section class="skills container-fluid" id="skills">
+   <section class="skillss " id="skillss">
     <div id="skills">
         <div class="skills-header">
             <h2>My <span>Skills</span></h2>
             <p>Here is my skills to reprensent my expertise</p>
         </div>
         <div>
-            <div class="skill-main">
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>HTML</h3>
-                     <h3>90%</h3>
-                    </div>
-                     <div class="progress">
-                            <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 90%;">
-                        </div>
-                    </div>
-                </div>
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>CSS</h3>
-                     <h3>85%</h3>
-                    </div>
-                     <div class="progress">
-                            <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 85%;">
-                        </div>
-                    </div>
-                </div>
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>BOOTSTRAP</h3>
-                     <h3>80%</h3>
-                    </div>
-                     <div class="progress">
-                            <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 80%;">
-                        </div>
-                    </div>
-                </div>
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>SASS</h3>
-                     <h3>80%</h3>
-                    </div>
-                     <div class="progress">
-                            <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 0%;">
-                        </div>
-                </div>
-                </div>
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>Java Script</h3>
-                     <h3>60%</h3>
-                    </div>
-                     <div class="progress">
-                            <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 60%;">
-                        </div>
-                    </div>
-                </div>
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>JQuery</h3>
-                     <h3>Learning...</h3>
-                    </div>
-                     <div class="progress">
-                            <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 0%;">
-                        </div>
-                    </div>
-                </div>
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>Node JS</h3>
-                     <h3>Learning...</h3>
-                    </div>
-                     <div class="progress">
-                            <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 0%;">
-                        </div>
-                    </div>
-                </div>
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>Express JS</h3>
-                     <h3>Learning...</h3>
-                    </div>
-                     <div class="progress">
-                            <div class="progress-bar progress-bar-animated progress-bar-striped" id="html" style="width: 0%;">
-                        </div>
-                    </div>
-                </div>
-                <div class="skills-percent">
-                    <div class="skill-iteam">
-                    <h3>Mango DB</h3>
-                     <h3>Learning...</h3>
-                    </div>
-                     <div class="progress">
-                            <div class="progress-bar" style="width: 0%;">
-                        </div>
-                    </div>
-                </div>
+<div class="row me-5 ps-4 pe-2">
+    <div class="skills-percent mb-5 col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>HTML</h3>
+         <h3>90%</h3>
+        </div>
+         <div class="progress ">
+                <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 90%;">
             </div>
+        </div>
+    </div>
+    <div class="skills-percent mb-5  col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>CSS</h3>
+         <h3>85%</h3>
+        </div>
+         <div class="progress">
+                <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 85%;">
+            </div>
+        </div>
+    </div>
+    <div class="skills-percent mb-5 col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>BOOTSTRAP</h3>
+         <h3>80%</h3>
+        </div>
+         <div class="progress">
+                <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 80%;">
+            </div>
+        </div>
+    </div>
+    <div class="skills-percent mb-5 col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>SASS</h3>
+         <h3>80%</h3>
+        </div>
+         <div class="progress">
+                <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 0%;">
+            </div>
+    </div>
+    </div>
+    <div class="skills-percent mb-5 col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>Java Script</h3>
+         <h3>60%</h3>
+        </div>
+         <div class="progress">
+                <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 60%;">
+            </div>
+        </div>
+    </div>
+    <div class="skills-percent mb-5 col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>JQuery</h3>
+         <h3>Learning...</h3>
+        </div>
+         <div class="progress">
+                <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 0%;">
+            </div>
+        </div>
+    </div>
+    <div class="skills-percent mb-5 col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>Node JS</h3>
+         <h3>Learning...</h3>
+        </div>
+         <div class="progress">
+                <div class=" progress-bar progress-bar-animated progress-bar-striped" style="width: 0%;">
+            </div>
+        </div>
+    </div>
+    <div class="skills-percent mb-5 col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>Express JS</h3>
+         <h3>Learning...</h3>
+        </div>
+         <div class="progress">
+                <div class="progress-bar progress-bar-animated progress-bar-striped" id="html" style="width: 0%;">
+            </div>
+        </div>
+    </div>
+    <div class="skills-percent mb-5 col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="skill-iteam">
+        <h3>Mango DB</h3>
+         <h3>Learning...</h3>
+        </div>
+         <div class="progress">
+                <div class="progress-bar" style="width: 0%;">
+            </div>
+        </div>
+    </div>
+</div>
         </div>
         <div>
    </section>
@@ -229,7 +229,6 @@
       
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
 </body>
 </html>
 
