--- a/index.html
+++ b/index.html
@@ -198,28 +198,28 @@
     <div class="container-fluid row" id="cards">
             <div class="box1 col-md-3 pb-5 ">
                 <div class="card-body">
-                    <img src="../my-portfolio/public/images/shopping.jpg" alt="">
+                    <img src="../my-portfolio/public/images/food.jpg" alt="">
                 <div class="card-text">
-                    <a href="#"> <h3>Shopping</h3></a>
+                    <a href="#"> <h3>Food</h3></a>
                  </div>     
                 </div>    
         </div>
             <div class="box1 col-md-3 pb-5">
                 <div class="card-body">
-                    <img src="../my-portfolio/public/images/india.jpg" class=" img-fluid" alt="">
+                    <img src="../my-portfolio/public/images/shopping.jpg" class=" img-fluid" alt="">
                 <div class="card-text">
-                    <a href="#"> <h3>Tourism</h3></a>
+                    <a href="#"> <h3>Shopping</h3></a>
                  </div>
                 </div>
         </div>
-            <div class="box3 col-md-3 pb-5 ">
+<!--             <div class="box3 col-md-3 pb-5 ">
                 <div class="card-body">
                     <img src="../my-portfolio/public/images/photography.jfif" class=" img-fluid" alt="">
                 <div class="card-text">
                     <a href="#"> <h3>Photography</h3></a>
                  </div>
                 </div>
-            </div>    
+            </div>     -->
         </div>
    </section>
    <aside class="top">
