--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="card-body">
                     <img src="../my-portfolio/public/images/food.jpg" alt="">
                 <div class="card-text">
-                    <a href="#"> <h3>Food</h3></a>
+                    <a href="https://mirzamoinbaig.github.io/foodie/"> <h3>Food</h3></a>
                  </div>     
                 </div>    
         </div>
@@ -208,7 +208,7 @@
                 <div class="card-body">
                     <img src="../my-portfolio/public/images/shopping.jpg" class=" img-fluid" alt="">
                 <div class="card-text">
-                    <a href="#"> <h3>Shopping</h3></a>
+                    <a href="https://mirzamoinbaig.github.io/shopping/"> <h3>Shopping</h3></a>
                  </div>
                 </div>
         </div>
